# Blogging-Social-App

./: README.md
back-end/: .gitignore  index.js  package-lock.json  package.json
back-end/Controllers/: authController.js  postController.js  userController.js
back-end/Routes/: authRoutes.js  postRoutes.js  userRoutes.js
back-end/config/: db.js
back-end/middleware/: authMiddleware.js
back-end/models/: Comment.js  Post.js  User.js
frontend-vite/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend-vite/src/: App.css  App.jsx  index.css
frontend-vite/src/components/: Alert.jsx  BlogCard.jsx  Chatbot.jsx  Header.jsx  Sidebar.jsx
frontend-vite/src/pages/: BlogPostPage.jsx  CreatePostPage.jsx  DashboardPage.jsx  ForgotPasswordPage.jsx  HomePage.jsx  LoginPage.jsx  NotificationPage.jsx  ProfilePage.jsx  SignupPage.jsx  WelcomePage.jsx
frontend/public/: index.html
frontend/src/: index.css
frontend/src/components/: auth-provider.jsx  (+4 more)
socialbloggingcrew/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  blog_post_metadata.json  logger.py  pyproject.toml  requirements.txt
socialbloggingcrew/chroma_db_store/: chroma.sqlite3
socialbloggingcrew/knowledge/: brand_guidelines.txt  company_policies.txt  past_successes.txt  seo_and_style_guide.txt
socialbloggingcrew/knowledge_base/: content_guidelines.md  formatting_standards.md  prompt_ideas.md  tone_styles.md
socialbloggingcrew/knowledge_base/sample_posts/: ai_in_smart_homes.md  ethical_ai_development.md  understanding_generative_ai.md
socialbloggingcrew/src/social_blogging_app/: crew.py
socialbloggingcrew/src/social_blogging_app/tools/: rag_utils.py
socialbloggingcrew/src/socialbloggingcrew/: blog_post.md  blog_post_metadata.json  crew.py  db.py  main.py  rag.py
socialbloggingcrew/src/socialbloggingcrew/config/: agents.py  agents.yaml  tasks.py  tasks.yaml
socialbloggingcrew/src/socialbloggingcrew/tools/: custom_tool.py  rag_system.py  rag_tools.py  search_tools.py
(+3 files in other folders)
