[project]
name = "socialbloggingcrew"
version = "0.1.0"
description = "SocialBloggingCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
socialbloggingcrew = "socialbloggingcrew.main:run"
run_crew = "socialbloggingcrew.main:run"
train = "socialbloggingcrew.main:train"
replay = "socialbloggingcrew.main:replay"
test = "socialbloggingcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
