[project]
name = "socialbloggingcrew"
version = "0.1.0"
description = "Socialbloggingcrew using crewAI"
authors = [{ name = "Raymond Odhiambo", email = "rayymondodhiambo@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
social_blogging_app = "socialbloggingcrew.main:run"
run_crew = "socialbloggingcrew.main:run"
train = "socialbloggingcrew.main:train"
replay = "socialbloggingcrew.main:replay"
test = "socialbloggingcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
